[package]
name = "antielectrophile"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
crossterm = "0.29.0"
env_logger = "0.11.8"
etherparse = "0.18.0"
figlet-rs = "0.1.5"
hex = "0.4.3"
local-ip-address = "0.6.5"
log = "0.4.27"
pcap = "2.2.0"
rand = "0.9.1"
regex = "1.11.1"
serde = "1.0.219"
serde_json = "1.0.140"
termcolor = "1.4.1"
termion = "4.0.5"
thiserror = "2.0.12"
tui = "0.19.0"
